# userspaceLUKS

./: Makefile.am  README.md  configure.ac  init-builder.sh  luks_stats  luks_unlock  mount_fileops.h  mount_main.c  mount_main.h
lib/.deps/: libluks_la-phdr.Plo
lib/crypto_backend/: Makefile.am  README.md
lib/crypto_backend/.deps/: libcrypto_backend_la-af.Plo  libcrypto_backend_la-crc32.Plo  libcrypto_backend_la-crypto_cipher_openssl.Plo  libcrypto_backend_la-crypto_openssl.Plo  libcrypto_backend_la-crypto_storage.Plo  libcrypto_backend_la-pbkdf_check.Plo
lib/crypto_backend/openssl/: opensslconf.h
src/: Makefile.am
